# anastasia

./: LICENSE  README.md  details.md
android/v1/: .gitignore  README.md  local.properties
android/v2/: settings.gradle.kts
circuits/: .gitignore  README.md
circuits/artifacts/: BaseZKHonkVerifier_metadata.json  CommitmentSchemeLib.json  CommitmentSchemeLib_metadata.json  FrLib.json  FrLib_metadata.json  Honk.json  HonkVerificationKey.json  HonkVerificationKey_metadata.json  HonkVerifier.json  HonkVerifier_metadata.json  Honk_metadata.json  IVerifier_metadata.json  RelationsLib.json  RelationsLib_metadata.json  ZKTranscriptLib.json  ZKTranscriptLib_metadata.json
circuits/es256_ca/: Nargo.toml  Prover.toml
circuits/es256_core/: Nargo.toml
crates/anastasia-mopro/: Cargo.toml  Config.toml
crates/anastasia-mopro/MoproAndroidBindings/uniffi/mopro/: mopro.kt
crates/anastasia-mopro/android/app/src/main/assets/: es256_ee.vk
crates/anastasia-mopro/android/app/src/main/java/com/example/moproapp/: MainActivity.kt  NoirComponent.kt
crates/anastasia-mopro/android/app/src/main/java/uniffi/mopro/: mopro.kt
crates/anastasia-mopro/android/gradle/: libs.versions.toml
crates/anastasia-mopro/src/: ffi_types.rs  lib.rs
crates/anastasia-rs/: Cargo.toml
crates/anastasia-rs/data/: README.md  es256_ca.json  es256_ca.vk  es256_ee.json
crates/anastasia-rs/src/: api.rs  cert.rs  circuit.rs  lib.rs  poseidon.rs  prove.rs  utils.rs
crates/anastasia-rs/src/poseidon/: config.rs  crh.rs
crates/anastasia-rs/test_data/: es256_ca.der  es256_ca.txt  es256_ee.der  es256_ee.txt
(+113 files in other folders)
