[package]
name = "anastasia-rs"
version = "0.1.0"
edition = "2024"
authors = ["yamdan"]

[dependencies]
ark-bn254 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["crh", "merkle_tree"] }
ark-ff = "0.5.0"
ark-std = "0.5.0"
chrono = "0.4.42"
flate2 = "1.1.2"
hex = "0.4.3"
itertools = "0.14.0"
noir = { git = "https://github.com/zkmopro/noir-rs", features = ["barretenberg"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde_json = "1.0.143"
x509-parser = "0.18.0"
